--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body{
-    background-color: yellow;
-    color: red;
+    background-color: rgb(8, 8, 0);
+    color: rgb(230, 217, 217);
 }
 
 h1{
