--- a/style.css
+++ b/style.css
@@ -6,6 +6,10 @@ body{
 
 h1{
     text-align: center;
-    color: rgb(255, 47, 175);
+    color: rgb(164, 28, 198);
     text-transform: uppercase;
+}
+h2{
+    text-align: center;
+    color: blueviolet;
 }
