--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-    background-color: rgb(244, 244, 235);
+    background-color:white(0 92% 4%);
     color: rgb(57, 54, 54);
     font-size: 30px;
 }
