--- a/style.css
+++ b/style.css
@@ -7,13 +7,13 @@ body{
 
 h1{
     text-align: center;
-    color: rgb(142, 18, 18);
+    color: brown(142, 18, 18);
     text-transform: uppercase;
 }
 
 h3{
     text-align: left;
-    color: rgb(0, 0, 0);
+    color: brown, 15, 15);
 }
 h4{
     color: brown;
