--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body{
     background-color:white(0 92% 4%);
-    color: rgb(57, 54, 54);
+    color:brown(57, 54, 54);
     font-size: 30px;
     line-height: 1.5;
 }
